<resources>
    <string name="app_name">SankalpTaru RFID tool</string>

    <string name="dialog_wait">please waiting</string>
    <string name="dialog_operating">operating&#8230;</string>
    <string name="dialog_set_name">change ble name</string>
    <string name="dialog_input_name">input new name</string>
    <string name="dialog_button_positive">OK</string>
    <string name="dialog_button_negative">Cancel</string>

    <string name="log_find_device">find device: </string>
    <string name="log_rssi_value"> rssi value: </string>
    <string name="log_find_card">MainActivity find card：</string>

    <string name="text_searching">searching device&#8230;</string>
    <string name="text_connecting">connecting&#8230;</string>
    <string name="text_no_device">no device!</string>
    <string name="text_connect_success">device connected!</string>
    <string name="text_device_name">device name:</string>
    <string name="text_rssi_value">rssi value:</string>
    <string name="text_sdk_version">SDK version:</string>
    <string name="text_disconnect">device disconnect!</string>
    <string name="text_button_short_press">button short press</string>
    <string name="text_button_long_press">button long press</string>
    <string name="text_non_connect">please connect device！</string>
    <string name="text_set_name_succeed">change name succeed! It takes effect after reboot</string>
    <string name="text_set_name_failed">change name failed</string>
    <string name="text_open_beep_succeed">open beep succeed</string>
    <string name="text_close_beep_succeed">close beep succeed</string>
    <string name="text_open_anti_lost_succeed">open anti lost succeed</string>
    <string name="text_close_anti_lost_succeed">close anti lost succeed</string>
    <string name="text_open_auto_search">open auto search card</string>
    <string name="text_close_auto_search">close auto search card</string>
    <string name="text_open_auto_search_failed">do not support auto search card</string>
    <string name="text_send">send:</string>
    <string name="text_return">return:</string>
    <string name="text_14443B_find">find ISO14443-B card->UID:(send 0036000008 to obtain identity card UID)</string>
    <string name="text_CPU_find">find CPU card->UID:</string>
    <string name="text_CPU_unknown">unknown CPU card!</string>
    <string name="text_CPU_deposit_card">deposit card</string>
    <string name="text_CPU_debit_card">debit card</string>
    <string name="text_CPU_send_apdu">send APDU command: read 10 transaction records</string>
    <string name="text_CPU_non">non CPU card</string>
    <string name="text_felica_find">read bank 0000 from service 008b: </string>
    <string name="text_ultralight_find">find Ultralight card ->UID:</string>
    <string name="text_ultralight_read_0">read bank 0:</string>
    <string name="text_ultralight_read_100">read 100 bytes data</string>
    <string name="text_ultralight_reading">reading data</string>
    <string name="text_ultralight_read_succeed">read succeed:</string>
    <string name="text_mifare_find">find Mifare card->UID:</string>
    <string name="text_mifare_verify">verify password</string>
    <string name="text_mifare_16">data of bank 16:</string>
    <string name="text_mifare_17">data of bank 17:</string>
    <string name="text_mifare_verify_failed">verify password failed</string>
    <string name="text_15693_find">find 15693 card ->UID:</string>
    <string name="text_15693_non">non-15693 card</string>
    <string name="text_15693_read_4">read bank 4</string>
    <string name="text_15693_write_56">write 0102030405060708 to bank 5 and 6</string>
    <string name="text_15693_read_56">read bank 5 and 6</string>
    <string name="text_15693_56">data of bank of 5 and 6:</string>
    <string name="text_15693_read_config">read data from configuration %1$s:</string>
    <string name="text_15693_write_config">write data to configuration %1$s, data: %2$s</string>
    <string name="text_15693_verify_pwd">verify bank %1$d by password:%2$s</string>
    <string name="text_15693_write_pwd">bank %1$d write password:%2$s</string>
    <string name="text_15693_read_block">read bank %1$s:</string>
    <string name="text_15693_write_block">write data to bank %1$s, data: %2$s</string>
    <string name="text_version">device version:</string>
    <string name="text_power">device power:</string>
    <string name="text_power_low">low power, please charge</string>
    <string name="text_power_enough">The device is fully charged</string>
    <string name="text_fast_succeed">fast transmission is set</string>
    <string name="text_fast_failed">do not support fast transmission!</string>
    <string name="text_start_auto_search">start auto search card&#8230;</string>
    <string name="text_transaction_out">transfer</string>
    <string name="text_transaction_query">query</string>
    <string name="text_transaction_in">entry</string>
    <string name="text_transaction_no_record">no record</string>
    <string name="text_input_err_1">input error 1</string>
    <string name="text_input_err_2">input error 2</string>
    <string name="text_ntag21x_read">read bank %1$s</string>
    <string name="text_ntag21x_non">non-Ultralight card</string>
    <string name="text_write">write data tot bank %1$s, data: %2$s</string>
    <string name="text_write_succeed">write data succeed!</string>
    <string name="text_write_failed">write data failed!</string>
    <string name="text_ntag21x_write_pwd">write password to bank 2B:</string>
    <string name="text_ntag21x_write_pwd_succeed">write password succeed!</string>
    <string name="text_ntag21x_write_pwd_failed">write password failed!</string>
    <string name="text_ntag21x_write_type">write protect type to bank 2A:</string>
    <string name="text_ntag21x_write_wp">write protect</string>
    <string name="text_ntag21x_write_rwp">read write protect</string>
    <string name="text_ntag21x_write_type_succeed">write protect type succeed!</string>
    <string name="text_ntag21x_write_type_failed">write protect type failed!</string>
    <string name="text_ntag21x_write_addr">write protect address to bank 29:</string>
    <string name="text_ntag21x_write_addr_succeed">write protect address succeed!</string>
    <string name="text_ntag21x_write_addr_failed">write protect address failed!</string>
    <string name="text_verify">verify password:</string>
    <string name="text_verify_succeed">verify succeed!</string>
    <string name="text_verify_failed">verify failed!</string>
    <string name="text_ntag21x_read_sig">read sig</string>
    <string name="text_ntag21x_static_lock">static lock bank 8</string>
    <string name="text_ntag21x_static_lock_succeed">static lock bank 8 succeed!</string>
    <string name="text_ntag21x_static_lock_failed">static lock bank 8 failed!</string>
    <string name="text_ntag21x_dynamic_lock">dynamic lock bank 16–17</string>
    <string name="text_ntag21x_dynamic_lock_succeed">dynamic lock bank 16–17 succeed!</string>
    <string name="text_ntag21x_dynamic_lock_failed">dynamic lock bank 16–17 failed!</string>

    <string name="btn_disconnect">disconnect</string>
    <string name="btn_search">search ble device</string>
    <string name="btn_rw">R/W</string>
    <string name="btn_set_name">set name</string>
    <string name="btn_clear">clear</string>
    <string name="btn_open_beep">open beep</string>
    <string name="btn_close_beep">close beep</string>
    <string name="btn_open_anti_lost">open anti-lost</string>
    <string name="btn_close_anti_lost">close anti-lost</string>
    <string name="btn_close_search">close search</string>
    <string name="btn_open_search">open search</string>
    <string name="btn_read">read</string>
    <string name="btn_write">write</string>
    <string name="btn_encrypt">encrypt</string>
    <string name="btn_verify">verify &amp; R/W</string>
    <string name="btn_change_pwd">change pwd</string>
    <string name="btn_change_protect_type">protect type</string>
    <string name="btn_change_protect_block">protect block</string>
    <string name="btn_read_sig">read sig</string>
    <string name="btn_static_lock">static lock 8</string>
    <string name="btn_dynamic_lock">dynamic lock 16–17</string>
    <string name="btn_read_transaction">read transaction</string>
    <string name="btn_read_configuration">read config</string>
    <string name="btn_write_configuration">write config</string>
    <string name="btn_verify_pwd">verify pwd</string>

    <string name="edit_search">click search ble button</string>
    <string name="edit_block_no">block no(hex)</string>
    <string name="edit_send_data">send data(hex)</string>
    <string name="edit_password">password(hex)</string>
    <string name="edit_password_new">new password(hex)</string>
    <string name="edit_result">result</string>

    <string name="radio_protect_w">W protect</string>
    <string name="radio_protect_rw">R/W protect</string>
    <string name="radio_pwd0">pwd 0</string>
    <string name="radio_pwd1">pwd 1</string>
    <string name="radio_pwd2">pwd 2</string>
    <string name="radio_pwd3">pwd 3</string>
    <string name="OEM_version">SankalpTaru RFID Tool v1.0.0</string>
    <string name="sankalptaru_logo">SankalpTaru Logo</string>
    <string name="beep_test">Beep Test</string>
    <string name="rename_device">Rename Device</string>
    <string name="you_can_perform_below_operations">You can perform below operations</string>
    <string name="data_specific_operations">Data Specific Operations</string>
    <string name="write_data_to_sankalptaru_rfid_tag">Write Data (to SankalpTaru RFID tag)</string>
    <string name="read_data_from_sankalptaru_rfid_tag">Read Data (from SankalpTaru RFID tag)</string>
    <string name="core_operations">Core Operations</string>
    <string name="inventory_for_iso_15693">Inventory for ISO 15693</string>
    <string name="inventory_for_iso_14443">Inventory for ISO 14443 (Mifare)</string>
    <string name="write_data_to_tag">Write Data To TAG</string>
    <string name="write_data_to_mifare_card">Write Data To Mifare Card</string>
    <string name="read_data_from_tag">Read Data From TAG</string>
    <string name="read_data_from_mifare_card">Read Data From Mifare Card</string>
    <string name="operation_related_logs">Operation Related Logs</string>

    <string-array name="tree_fields">
        <item name="location">Location</item>
        <item name="tree_id">Tree ID</item>
        <item name="name">Name</item>
        <item name="species">Species</item>
        <item name="date_of_plantation">Date of Plantation</item>
        <item name="tree_url">Tree URL</item>
        <item name="beneficiary_name">Beneficiaries Name</item>
    </string-array>
</resources>
