<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorPrimaryDark"
        android:elevation="10dp"
        android:minHeight="?attr/actionBarSize"
        android:paddingBottom="5dp"
        app:titleTextColor="@android:color/white">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/sankalptaru_logo"
            app:srcCompat="@drawable/sankalptaru_logo_green" />

    </androidx.appcompat.widget.Toolbar>


    <ScrollView
        android:id="@+id/btnContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.45"
        android:background="@color/colorPrimaryDark">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnConnect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_search" />

            <Button
                android:id="@+id/btnBeep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/beep_test" />

            <Button
                android:id="@+id/btnRename"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/rename_device" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:padding="10dp"
                android:text="@string/you_can_perform_below_operations"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textIsSelectable="false"
                android:textSize="16sp" />

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="5dp"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#8BC34A"
                android:orientation="vertical"
                android:padding="1dp">

                <Button
                    android:id="@+id/btnDataSpecificOps"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#388E3C"
                    android:drawableEnd="@android:drawable/arrow_down_float"
                    android:paddingStart="0dp"
                    android:paddingEnd="10dp"
                    android:text="@string/data_specific_operations"
                    android:textColor="@android:color/white" />

                <LinearLayout
                    android:id="@+id/layoutDataSpecificOps"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:visibility="gone"
                    tools:visibility="gone">

                    <Button
                        android:id="@+id/write_data"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:text="@string/write_data_to_sankalptaru_rfid_tag" />

                    <Button
                        android:id="@+id/read_data"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:text="@string/read_data_from_sankalptaru_rfid_tag" />
                </LinearLayout>

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#2196F3"
                android:orientation="vertical"
                android:padding="1dp">

                <Button
                    android:id="@+id/btnCoreOperations"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#1976D2"
                    android:drawableEnd="@android:drawable/arrow_down_float"
                    android:paddingStart="0dp"
                    android:paddingEnd="10dp"
                    android:text="@string/core_operations"
                    android:textColor="@android:color/white" />

                <LinearLayout
                    android:id="@+id/layoutCoreOps"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:visibility="gone"
                    tools:visibility="gone">

                    <Button
                        android:id="@+id/btnInventory15693"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:text="@string/inventory_for_iso_15693" />

                    <Button
                        android:id="@+id/btnInventory14443"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:text="@string/inventory_for_iso_14443" />

                    <Button
                        android:id="@+id/btnWrite15693"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:text="@string/write_data_to_tag" />

                    <Button
                        android:id="@+id/btnWrite14443"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:text="@string/write_data_to_mifare_card" />

                    <Button
                        android:id="@+id/btnRead15693"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:text="@string/read_data_from_tag" />

                    <Button
                        android:id="@+id/btnRead14443"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:text="@string/read_data_from_mifare_card" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <ScrollView
        android:id="@+id/logScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.55">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical">

            <View
                android:id="@+id/divider5"
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/operation_related_logs"
                android:textAlignment="center"
                android:textIsSelectable="false"
                android:textSize="16sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/divider4"
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/logTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>